# helena_haffner_softDest_P10_16082024

./: README.md  pyproject.toml
authentication/: forms.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
postman_json/: softDesk.postman_collection.json
project/: settings.py  urls.py
softdesk/: admin.py  custom_pagination.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/migrations/: 0001_initial.py
